Added basic JS game logic

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>TOP Rock Paper Scissors</h1>
         <div id="game-container">
             <div id="start-screen">
-                <p>How many rounds?</p>
+                <!-- <p>How many rounds?</p>
                 <input id="number-of-rounds-input">
-                <button id="number-of-rounds-button">Submit</button>
+                <button id="number-of-rounds-button">Submit</button> -->
             </div>
         </div>
     </div>
