--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 <body>
     <div id="main">
         <h1>TOP Rock Paper Scissors</h1>
-        <h2 id="current-round"></h2>
+        <h2 id="current-round">Round 1</h2>
         <div id="game-container">
             
                 
             <div class="player-container">
                 <h3>YOUR SCORE</h3>
-                <p class="score-graphic"></p>
+                <div id="player-score" class="score-graphic">
+                    <div class="score-block" id="player-win-block-1"></div>
+                    <div class="score-block" id="player-win-block-2"></div>
+                    <div class="score-block" id="player-win-block-3"></div>
+                </div>
                 <div class="card-container">
                     <img id="player-rock" class="card" src="./IMG/SVG/Rock.svg">
                     <img id="player-paper" class="card" src="./IMG/SVG/Paper.svg">
@@ -27,7 +31,11 @@
 
             <div class="player-container">
                 <h3>OPPONENT'S SCORE</h3>
-                <p class="score-graphic"></p>
+                <div id="opponent-score" class="score-graphic">
+                    <div class="score-block" id="opponent-win-block-1"></div>
+                    <div class="score-block" id="opponent-win-block-2"></div>
+                    <div class="score-block" id="opponent-win-block-3"></div>
+                </div>
                 <div class="card-container">
                     <img id="opponent-rock" class="card" src="./IMG/SVG/Rock.svg">
                     <img id="opponent-paper" class="card" src="./IMG/SVG/Paper.svg">
