Added basic hover animations

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     <div class="score-block" id="player-win-block-3"></div>
                 </div>
                 <div class="card-container">
-                    <img id="player-rock" class="card" src="./IMG/SVG/Rock.svg">
-                    <img id="player-paper" class="card" src="./IMG/SVG/Paper.svg">
-                    <img id="player-scissors" class="card" src="./IMG/SVG/Scissors.svg">
+                    <img id="player-rock" class="card player-card" src="./IMG/SVG/Rock.svg">
+                    <img id="player-paper" class="card player-card" src="./IMG/SVG/Paper.svg">
+                    <img id="player-scissors" class="card player-card" src="./IMG/SVG/Scissors.svg">
                 </div>
             </div>
 
