--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 
             <div class="player-container">
                 <h3>YOUR SCORE</h3>
-                <div iclass="score-tracker">
+                <div class="score-tracker" id="player-score">
                     <div class="score-block" id="player-win-block-1"></div>
                     <div class="score-block" id="player-win-block-2"></div>
                     <div class="score-block" id="player-win-block-3"></div>
@@ -31,7 +31,7 @@
 
             <div class="player-container">
                 <h3>OPPONENT'S SCORE</h3>
-                <div class="score-tracker">
+                <div class="score-tracker" id="opponent-score">
                     <div class="score-block" id="opponent-win-block-1"></div>
                     <div class="score-block" id="opponent-win-block-2"></div>
                     <div class="score-block" id="opponent-win-block-3"></div>
