--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 </head>
 <body>
     <div id="main">
-        <h1>TOP Rock Paper Scissors</h1>
-        <h2 id="current-round">Round 1</h2>
+        <!-- <h1>TOP Rock Paper Scissors</h1>
+        <h2 id="current-round">Round 1</h2> -->
         <div id="game-container">
             <div id="start-screen">
-                <!-- <p>Select a game mode</p> -->
+                <div id="game-type-choice">
+                    <div id="rps-button">
+                        <h3>Normal RPS</h3>
+                    </div>
+                    <div id="rpsls-button">
+                        <h3>Lizard Spock</h3>                        
+                    </div>
+                </div>
+                
             </div>
             
         </div>
